# nnvisu

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
backend/: mypy.ini  requirements.txt  ruff.toml
backend/src/: app.py  handlers.py  protocol.py
frontend/src/: index.html  main.js  style.css
specs/001-nn-training-viz/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dynamic-arch-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-backend-refactor-multiuser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-dense-probabilistic-grid/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gui-dynamic-classes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-usability-layout-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-advanced-training-settings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-artificial-data-generators/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-responsive-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-optimize-network-training/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-fix-arch-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/nnvisu/: __init__.py  __main__.py  app.py  handlers.py  protocol.py
src/nnvisu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: test_architecture_sync.py  test_architecture_update.py  test_concurrency.py
(+37 files in other folders)
