[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnvisu"
version = "0.1.0"
description = "A real-time neural network training visualizer"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tornado>=6.3",
    "numpy>=1.24",
    "torch>=2.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.21"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nnvisu = ["static/**/*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
