[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnvisu"
version = "1.0"
description = "A real-time neural network training visualizer"
authors = [
    {name = "Jan Švec", email = "honzas@kky.zcu.cz"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tornado>=6.3",
    "numpy>=1.24",
    "torch>=2.0" # Use CPU-only version in restricted environments: pip install torch --index-url https://download.pytorch.org/whl/cpu
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.21"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nnvisu = ["static/**/*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
